# statica

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cursor/rules/: statica-authoring.mdc  statica-rust.mdc
.github/workflows/: ci.yml  release.yml  tag-release.yml
crates/statica/: AGENTS.md  Cargo.toml
crates/statica-cli/: AGENTS.md  Cargo.toml  build.rs
crates/statica-cli/src/: config.rs  main.rs
crates/statica-cli/src/cmd/: build.rs  mod.rs  new.rs  preview.rs  serve.rs  util.rs  watch.rs
crates/statica-core/: AGENTS.md  Cargo.toml
crates/statica-core/src/: aliases.rs  assets.rs  build.rs  build_log.rs  discover.rs  emit.rs  emit_opts.rs  error.rs  feeds.rs  font.rs  forms.rs  fragment.rs  i18n.rs  images.rs  lib.rs  loc.rs  minify.rs  paginate.rs
crates/statica-core/src/bind/: attrs.rs  mod.rs  slots.rs
crates/statica-core/src/content/: markdown.rs  mod.rs
crates/statica-core/src/funnel/: bind_decl.rs  js_value.rs  json.rs  mod.rs
crates/statica-core/src/parse/: ast.rs  html5.rs  mod.rs  pre.rs
crates/statica-core/src/runtime/: mod.rs  statica.js
crates/statica-core/src/scope/: mod.rs
crates/statica-core/tests/: build_fixture.rs
crates/statica/src/: assets.rs  build.rs  cli.rs  cli_config.rs  config.rs  css.rs  discover.rs  env.rs  error.rs  feeds.rs  fragment.rs  i18n.rs  lib.rs  loc.rs  main.rs  manifest.rs  style.rs
crates/statica/src/bind/: mod.rs
crates/statica/src/cmd/: build.rs  new.rs  util.rs  watch.rs
crates/statica/src/funnel/: json.rs
crates/statica/src/parse/: html5.rs  mod.rs  normalize.rs  serialize.rs
crates/statica/src/scope/: css.rs  js.rs
crates/statica/tests/: build_fixture.rs
docs/: README.md  guide.md
docs/man/: statica-build.1  statica-new.1  statica-serve.1  statica-watch.1  statica.1
examples/bench-1k/: README.md  index.html  statica.toml
examples/bench-1k/blog/: index.html
examples/bench-1k/content/: posts.json
examples/bench-1k/posts/[slug]/: index.html
examples/bench-5k-pages/: README.md  index.html  statica.toml
examples/bench-5k-pages/blog/[page]/: index.html
examples/bench-5k-pages/blog/[slug]/: index.html
examples/bench-5k-pages/content/: posts.json
examples/bench-5k-pages/ui/: post-card.html
examples/blog/: AGENTS.md  README.md  index.html  statica.toml
examples/blog/[locale]/about/: index.html
examples/blog/about/: index.html
examples/blog/blog/[page]/: index.html
examples/blog/content/: posts.json
examples/blog/content/i18n/: en.json  pt.json
examples/blog/content/posts/: funnel-to-pages.md  hello-world.md  slots-everywhere.md  statica-ssg.md  typed-funnels.md
examples/blog/posts/[slug]/: index.html
examples/blog/public/: manifest.webmanifest  site.css  site.js
examples/blog/ui/: button.html  page-link.html  post-card.html  post-link.html  post-list.html  related-posts.html
homebrew/: README.md
npm/@statica/cli/: README.md  package.json
npm/@statica/cli-darwin-arm64/: package.json
npm/@statica/cli-darwin-x64/: package.json
npm/@statica/cli-linux-arm64-gnu/: package.json
npm/@statica/cli-linux-x64-gnu/: LICENSE  package.json
npm/@statica/cli-win32-x64/: package.json
scripts/: pack-npm.mjs  publish-homebrew-tap.sh  update-homebrew-formula.mjs  verify-npm-cli.mjs
