[workspace]
resolver = "2"
members = [
    "crates/statica",
    "crates/statica-cli",
]

[workspace.package]
version = "0.12.1"
edition = "2021"
license = "MIT"
authors = ["statica"]
repository = "https://github.com/statica/statica"
homepage = "https://github.com/statica/statica"
documentation = "https://docs.rs/statica"
readme = "README.md"
keywords = ["ssg", "static-site", "html", "cli"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
owo-colors = { version = "4", features = ["supports-colors"] }
html5ever = "0.27"
markup5ever_rcdom = "0.3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
walkdir = "2"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal"] }
tower-http = { version = "0.5", features = ["fs"] }
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
rss = { version = "2.1", features = ["builders"] }
sitemap-rs = "0.4"
lightningcss = { version = "1.0.0-alpha.71", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
oxipng = "9"
oxc_allocator = "0.140"
oxc_ast = "0.140"
oxc_codegen = "0.140"
oxc_mangler = "0.140"
oxc_minifier = "0.140"
oxc_parser = "0.140"
oxc_span = "0.140"
minify-html = "0.18.1"
glob = "0.3"
pulldown-cmark = "0.13"
serde_yaml = "0.9"
statica = { version = "0.12.1", path = "crates/statica" }
