[package]
name = "statica"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "statica — Powered HTML"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/statica"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "statica"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
notify.workspace = true
owo-colors.workspace = true
local-ip-address = "0.6"
serde.workspace = true
statica-core = { workspace = true }
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true

[build-dependencies]
clap = { workspace = true }
clap_mangen = "0.2"
