[package]
name = "statica"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "statica — Powered HTML pipeline (parse, funnel, bind, scope, emit)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/statica"
readme = "../../README.md"
keywords = ["ssg", "static-site", "html"]
categories = ["web-programming", "parser-implementations"]

[dependencies]
chrono.workspace = true
hex.workspace = true
html5ever.workspace = true
image.workspace = true
lightningcss.workspace = true
minify-html.workspace = true
markup5ever_rcdom.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_codegen.workspace = true
oxc_mangler.workspace = true
oxc_minifier.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxipng.workspace = true
rayon = "1"
rss.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sitemap-rs.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
pulldown-cmark.workspace = true
serde_yaml.workspace = true
indexmap = "2"
